--- a/package.json
+++ b/package.json
@@ -1,14 +1,33 @@
 {
   "name": "wyzr",
+  "proxy": "http://127.0.0.1:5000/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
+    "cra-template": "^1.2.0",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "google-auth-library": "^7.14.1",
+    "install": "^0.13.0",
+    "node-fetch": "^3.2.3",
+    "npm": "^8.7.0",
+    "or": "^0.2.0",
+    "popper.js": "^1.16.1",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.2.3",
     "react-dom": "^18.0.0",
-    "react-scripts": "5.0.1",
+    "react-google-login": "^5.2.2",
+    "react-modal": "^3.14.4",
+    "react-redux": "^7.2.8",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^5.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +53,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devServer": {
+    "inline": true,
+    "contentBase": "./dist",
+    "port": 8000,
+    "proxy": {
+      "/api/**": {
+        "target": "http://localhost:3000",
+        "secure": false
+      }
+    }
   }
 }
