--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "bluebird": "^3.7.2",
     "bootstrap": "^5.1.3",
     "cra-template": "^1.2.0",
     "dotenv": "^16.0.0",
@@ -28,6 +29,7 @@
     "react-scripts": "^5.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1",
+    "sqlite3": "^5.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
